--- a/app/templates/registration/password_reset_form.html
+++ b/app/templates/registration/password_reset_form.html
@@ -94,6 +94,7 @@
                         <div class="text-center mt-4">
                             <p class="text-dark mb-0">Вспомнили пароль?<a class="text-primary ms-1" href="{% url 'login' %}">Авторизация</a></p>
                         </div>
+                        <!--
                         <label class="login-social-icon"><span>Или</span></label>
                         <div class="d-flex justify-content-center">
                             <a href="javascript:void(0)">
@@ -111,7 +112,7 @@
                                     <i class="fa fa-twitter"></i>
                                 </div>
                             </a>
-                        </div>
+                        </div>-->
                     </form>
                 </div>
             </div>
