--- a/app/templates/registration/register.html
+++ b/app/templates/registration/register.html
@@ -59,7 +59,7 @@
                     <div class="wrap-login100 p-6">
                         <form class="login100-form validate-form" method="post">
                             <span class="login100-form-title">
-									Registration
+									Регистрация
 								</span>
 								
 
@@ -93,17 +93,18 @@
                                 </a>
                                 <input class="input100 border-start-0 ms-0 form-control" type="password" placeholder="Password2" name="password2" maxlength="150" autocapitalize="none" autocomplete="password2" autofocus required id="password2">
                             </div>
-                            <label class="custom-control custom-checkbox mt-4">
+                           <!-- <label class="custom-control custom-checkbox mt-4">
 									<input type="checkbox" class="custom-control-input">
-									<span class="custom-control-label">Agree the <a href="terms.html">terms and policy</a></span>
-								</label>
+									<span class="custom-control-label">Согласен с  <a href="terms.html">условиями и политикой</a></span>
+								</label>-->
                             <div class="container-login100-form-btn">
                                 <input class="login100-form-btn btn-primary" type="submit" value="Register" formmethod="post">
                             </div>
                                 
                             <div class="text-center pt-3">
-                                <p class="text-dark mb-0">Already have account?<a href="login.html" class="text-primary ms-1">Sign In</a></p>
+                                <p class="text-dark mb-0">Уже есть аккаунт?<a href="/" class="text-primary ms-1">Войти</a></p>
                             </div>
+                            <!--
                             <label class="login-social-icon"><span>Register with Social</span></label>
                             <div class="d-flex justify-content-center">
                                 <a href="javascript:void(0)">
@@ -121,7 +122,7 @@
                                         <i class="fa fa-twitter"></i>
                                     </div>
                                 </a>
-                            </div>
+                            </div>-->
                         </form>
                     </div>
                 </div>
