--- a/app/templates/pages/cart/checkout.html
+++ b/app/templates/pages/cart/checkout.html
@@ -72,7 +72,7 @@
                                 {% endwith %}
                             </div>
                             <div class="card-footer text-end">
-                                <a class="btn btn-primary" href="{% url "payments:order_create" %}" id='click-payment'>Оплатить заказ</a>
+                                <a class="btn btn-primary" href="{% url "payments:order_print" %}" id='click-payment'>Оплатить заказ</a>
                             </div>
                         </div>
                     </div>
