--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body class="app sidebar-mini ltr login-img">
+<body class="app sidebar-mini ltr">
 
 <!-- BACKGROUND-IMAGE -->
 <div class="">
@@ -51,11 +51,10 @@
     <!-- PAGE -->
     <div class="page">
         <div class="">
-
             <!-- CONTAINER OPEN -->
             <div class="col col-login mx-auto mt-7">
                 <div class="text-center">
-                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/logo.png" height="100" class="header-brand-img" alt=""></a>
+                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/logo.png" height="150" class="header-brand-img" alt=""></a>
                 </div>
             </div>
 
