--- a/app/templates/theme/pages/index.html
+++ b/app/templates/theme/pages/index.html
@@ -1,8 +1,6 @@
-{% extends 'layout/index.html' %}
+{% extends 'theme/layout/main.html' %}
 
-{% block title %}
-<title>Psb-hosting.pro - Панель управления – Хостинг VDS/VPS серверов </title>
-{% endblock %}
+{% block title %}Панель управления{% endblock %}
 
 {% block content %}
     <div class="main-content app-content mt-0">
