--- a/app/static/assets/css/style.css
+++ b/app/static/assets/css/style.css
@@ -157,7 +157,7 @@ License        :   Licensed under ThemeForest License
 /*Transparent variables*/
 /* ###### Bootstrap ###### */
 :root {
-    --primary-bg-color: #6c5ffc;
+    --primary-bg-color: #79c8c2;
     --primary-bg-hover: #233ac5;
     --primary-bg-border: #5161c1;
     --dark-body: #292e4a;
@@ -6225,7 +6225,7 @@ ul.dropdown-menu li.dropdown ul.dropdown-menu .dropdown-plus-title {
 }
 
 .btn.dropdown-toggle.btn-primary~.dropdown-menu .dropdown-plus-title {
-    border-color: #357ebd !important;
+    border-color: #79c8c2 !important;
 }
 
 .btn.dropdown-toggle.btn-success~.dropdown-menu .dropdown-plus-title {
