--- a/app/static/assets/scss/bootstrap/_bootstrap-styles.scss
+++ b/app/static/assets/scss/bootstrap/_bootstrap-styles.scss
@@ -1,7 +1,7 @@
 /* ###### Bootstrap ###### */
 
 :root {
-    --primary-bg-color: #6c5ffc;
+    --primary-bg-color: #79c8c2;
     --primary-bg-hover: #233ac5;
     --primary-bg-border: #5161c1;
     --dark-body: #292e4a;
