--- a/app/templates/registration/password_change_done.html
+++ b/app/templates/registration/password_change_done.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/static/assets/images/brand/favicon.ico" />
 
     <!-- TITLE -->
-    <title>Sash – Bootstrap 5 Admin & Dashboard Template</title>
+    <title>Sash – Bootstrap 5 Admi3n & Dashboard Template</title>
 
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
