--- a/app/templates/registration/password_change_form.html
+++ b/app/templates/registration/password_change_form.html
@@ -8,14 +8,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
-    <meta name="author" content="Spruko Technologies Private Limited">
-    <meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
+    <meta name="author" content="{{ request.get_host }}">
 
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/assets/images/brand/favicon.ico" />
 
     <!-- TITLE -->
-    <title>Sash – Bootstrap 5 Admin & Dashboard Template</title>
+    <title>Смена пароля</title>
 
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -38,7 +37,7 @@
 
 </head>
 
-<body class="app sidebar-mini ltr login-img">
+<body class="app sidebar-mini ltr">
 
 <!-- BACKGROUND-IMAGE -->
 <div class="">
@@ -56,7 +55,7 @@
             <!-- CONTAINER OPEN -->
             <div class="col col-login mx-auto">
                 <div class="text-center">
-                    <a href="index.html"><img src="/static/assets/images/brand/logo-white.png" class="header-brand-img m-0" alt=""></a>
+                    <a href="{% url 'shop:index' %}"><img src="/static/assets/images/logo.png" height="150" class="header-brand-img" alt=""></a>
                 </div>
             </div>
             
@@ -90,21 +89,21 @@
                             <a href="" class="input-group-text bg-white text-muted">
                                 <i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
                             </a>
-                            <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="Old Password" name="old_password" autocomplete="current-password" autofocus required id="id_old_password">
+                            <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="Старый пароль" name="old_password" autocomplete="current-password" autofocus required id="id_old_password">
                           </div>
                           <label>Введите новый пароль</label>
                             <div class="wrap-input100 validate-input input-group" id="Password-toggle">
                               <a href="" class="input-group-text bg-white text-muted">
                                 <i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
                               </a>
-                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="New Password" name="new_password1" autocomplete="new-password" required id="id_new_password1">
+                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="Введите новый пароль" name="new_password1" autocomplete="new-password" required id="id_new_password1">
                             </div>
                             <label>Введите повторно новый пароль</label>
                             <div class="wrap-input100 validate-input input-group" id="Password-toggle">
                               <a href="" class="input-group-text bg-white text-muted">
                                 <i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
                               </a>
-                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="New Password2" name="new_password2" autocomplete="new-password" required id="id_new_password2">
+                              <input class="input100 border-start-0 form-control ms-0" type="password" placeholder="Повторите новый пароль" name="new_password2" autocomplete="new-password" required id="id_new_password2">
                             </div>
                               
                         <div class="submit">
