--- a/app/templates/theme/layout/main.html
+++ b/app/templates/theme/layout/main.html
@@ -1,49 +1,20 @@
 <!doctype html>
-<html lang="en" dir="ltr">
-
+<html lang="ru" dir="ltr">
 <head>
-
     <!-- META DATA -->
-    <meta charset="UTF-8">
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
-    <meta name="author" content="Spruko Technologies Private Limited">
-    <meta name="keywords"
-          content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
-
+    {% include 'theme/layout/block/meta.html' %}
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="/static/assets/images/brand/favicon.ico" />
-
     <!-- TITLE -->
-    {% block title %}
-    {% endblock %}
-
-    <!-- BOOTSTRAP CSS -->
-    <link id="style" href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- STYLE CSS -->
-    <link href="/static/assets/css/style.css" rel="stylesheet" />
-    <link href="/static/assets/css/dark-style.css" rel="stylesheet" />
-    <link href="/static/assets/css/transparent-style.css" rel="stylesheet">
-    <link href="/static/assets/css/skin-modes.css" rel="stylesheet" />
-
-    <!--- FONT-ICONS CSS -->
-    <link href="/static/assets/css/icons.css" rel="stylesheet" />
-
-    <!-- COLOR SKIN CSS -->
-    <link id="theme" rel="stylesheet" type="text/css" media="all" href="/static/assets/colors/color1.css" />
-
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Style theme -->
+    {% include 'theme/layout/block/head.html' %}
 </head>
 
 <body class="app sidebar-mini ltr light-mode">
-
 <!-- GLOBAL-LOADER -->
-<div id="global-loader">
-    <img src="/static/assets/images/loader.svg" class="loader-img" alt="Loader">
-</div>
+{% include 'theme/layout/block/loader.html' %}
 <!-- /GLOBAL-LOADER -->
-
 <!-- PAGE -->
 <div class="page">
     <div class="page-main">
@@ -170,11 +141,11 @@
                                                 </div>
                                             </div>
                                             <div class="dropdown-divider m-0"></div>
-                                            <a class="dropdown-item" href="javascript:void(0)">
+                                            <a class="dropdown-item" href="{% url 'shop:settings' %}">
                                                 <i class="dropdown-icon fe fe-user"></i> Профиль
                                             </a>
                                             <a class="dropdown-item" href="/accounts/password_change/">
-                                                <i class="dropdown-icon fe fe-user"></i> Смена пароля 
+                                                <i class="dropdown-icon fe fe-user"></i> Смена пароля
                                             </a>
                                             <a class="dropdown-item" href="{% url 'logout' %}">
                                                 <i class="dropdown-icon fe fe-alert-circle"></i> Выйти
@@ -233,7 +204,7 @@
                             <h3>Поддержка и документация</h3>
                         </li>
                         <li class="slide">
-                            <a class="side-menu__item has-link" href="#"><i
+                            <a class="side-menu__item has-link" href="https://psb-hosting-pro.gitbook.io/documentations/"><i
                                     class="side-menu__icon fe fe-file-text"></i><span
                                     class="side-menu__label">Документация</span><span class="badge bg-green br-5 side-badge blink-text pb-1">New</span></a>
                         </li>
@@ -246,131 +217,17 @@
             </div>
             <!--/APP-SIDEBAR-->
         </div>
-
         <!--app-content open-->
         {% block content %}
         {% endblock %}
-        <!--app-content close-->
-
+        <!--app-content closed-->
     </div>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row align-items-center flex-row-reverse">
-                <div class="col-md-12 col-sm-12 text-center">
-                    Копирование без письменного разрешения администратора сайта запрещено © <a href="javascript:void(0)">PSB</a> <span id="year"></span>. Разработано студией <span
-                        class="fa fa-heart text-danger"></span> <a href="javascript:void(0)"> AiLab </a> Все права защищены.
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- FOOTER END -->
-
+    {% include 'theme/layout/block/footer.html' %}
+    <!-- FOOTER CLOSED -->
 </div>
-
-<!-- BACK-TO-TOP -->
-<a href="#top" id="back-to-top"><i class="fa fa-angle-up"></i></a>
-
-<!-- JQUERY JS -->
-<script src="/static/assets/js/jquery.min.js"></script>
-
-<!-- BOOTSTRAP JS -->
-<script src="/static/assets/plugins/bootstrap/js/popper.min.js"></script>
-<script src="/static/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-
-<!-- SPARKLINE JS-->
-<script src="/static/assets/js/jquery.sparkline.min.js"></script>
-
-<!-- Sticky js -->
-<script src="/static/assets/js/sticky.js"></script>
-
-<!-- CHART-CIRCLE JS-->
-<script src="/static/assets/js/circle-progress.min.js"></script>
-
-<!-- PIETY CHART JS-->
-<script src="/static/assets/plugins/peitychart/jquery.peity.min.js"></script>
-<script src="/static/assets/plugins/peitychart/peitychart.init.js"></script>
-
-<!-- MORRIS CHART JS-->
-<script src="/static/assets/plugins/morris/raphael-min.js"></script>
-<script src="/static/assets/plugins/morris/morris.js"></script>
-
-
-<!-- SIDEBAR JS -->
-<script src="/static/assets/plugins/sidebar/sidebar.js"></script>
-
-<!-- Perfect SCROLLBAR JS-->
-<script src="/static/assets/plugins/p-scroll/perfect-scrollbar.js"></script>
-<script src="/static/assets/plugins/p-scroll/pscroll.js"></script>
-<script src="/static/assets/plugins/p-scroll/pscroll-1.js"></script>
-
-<!-- INTERNAL CHARTJS CHART JS-->
-<script src="/static/assets/plugins/chart/Chart.bundle.js"></script>
-<script src="/static/assets/plugins/chart/rounded-barchart.js"></script>
-<script src="/static/assets/plugins/chart/utils.js"></script>
-
-<!-- INTERNAL SELECT2 JS -->
-<script src="/static/assets/plugins/select2/select2.full.min.js"></script>
-
-<!-- INTERNAL Data tables js-->
-<script src="/static/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
-<script src="/static/assets/plugins/datatable/js/dataTables.bootstrap5.js"></script>
-<script src="/static/assets/plugins/datatable/dataTables.responsive.min.js"></script>
-
-<!-- INTERNAL APEXCHART JS -->
-<script src="/static/assets/js/apexcharts.js"></script>
-<script src="/static/assets/plugins/apexchart/irregular-data-series.js"></script>
-
-<!-- INTERNAL Flot JS -->
-<script src="/static/assets/plugins/flot/jquery.flot.js"></script>
-<script src="/static/assets/plugins/flot/jquery.flot.fillbetween.js"></script>
-<script src="/static/assets/plugins/flot/chart.flot.sampledata.js"></script>
-<script src="/static/assets/plugins/flot/dashboard.sampledata.js"></script>
-
-<!-- INTERNAL Vector js -->
-<script src="/static/assets/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
-<script src="/static/assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-
-<!-- SIDE-MENU JS-->
-<script src="/static/assets/plugins/sidemenu/sidemenu.js"></script>
-
-<!-- TypeHead js -->
-<script src="/static/assets/plugins/bootstrap5-typehead/autocomplete.js"></script>
-<script src="/static/assets/js/typehead.js"></script>
-
-<!-- INTERNAL INDEX JS -->
-<script src="/static/assets/js/index1.js"></script>
-
-<!-- CHARTJS CHART JS-->
-<script src="/static/assets/plugins/chart/Chart.bundle.js"></script>
-<script src="/static/assets/plugins/chart/utils.js"></script>
-
-<!-- C3 CHART JS-->
-<script src="/static/assets/plugins/charts-c3/d3.v5.min.js"></script>
-<script src="/static/assets/plugins/charts-c3/c3-chart.js"></script>
-<script src="/static/assets/js/circle-progress.min.js"></script>
-
-<!-- INPUT MASK JS-->
-<script src="/static/assets/plugins/input-mask/jquery.mask.min.js"></script>
-
-<!-- SIDE-MENU JS-->
-<script src="/static/assets/plugins/sidemenu/sidemenu.js"></script>
-
-<!-- TypeHead js -->
-<script src="/static/assets/plugins/bootstrap5-typehead/autocomplete.js"></script>
-<script src="/static/assets/js/typehead.js"></script>
-
-<!-- PIETY CHART JS-->
-<script src="/static/assets/plugins/peitychart/jquery.peity.min.js"></script>
-<script src="/static/assets/plugins/peitychart/peitychart.init.js"></script>
-<!-- Color Theme js -->
-<script src="/static/assets/js/themeColors.js"></script>
-
-<!-- CUSTOM JS -->
-<script src="/static/assets/js/custom.js"></script>
-
-
+{% include 'theme/layout/block/sctipt.html' %}
 </body>
 
 </html>
