--- a/app/templates/theme/pages/shop.html
+++ b/app/templates/theme/pages/shop.html
@@ -119,7 +119,7 @@
                                                       <p>Количество: <b id="id_text{{ cart.pk }}">1</b></p>
                                                             <button  onclick="quantityFunc('{{ cart.pk }}', '-')" class="btn btn-primary mx-2 mb-1 w-sm">-</button>
                                                             <button  onclick="quantityFunc('{{ cart.pk }}', '+')" class="btn btn-primary mx-2 mb-1 w-sm">+</button>
-                                                        <form action="{% url "cart:cart_add" cart.id %}" method="post">
+                                                        <form action="/cart/add/{{ cart.id }}/product" method="post">
                                                             <input type="hidden" name="quantity" value="1" id="id_quantiny{{ cart.pk }}">
                                                             {% csrf_token %}
                                                             <button type="submit" class="btn btn-primary mx-2 mb-1 w-sm"><i class="fe fe-shopping-cart me-2"></i>В коpзину</button>
