--- a/app/templates/theme/pages/cart/cart.html
+++ b/app/templates/theme/pages/cart/cart.html
@@ -56,9 +56,10 @@
                                                     <td class="fw-bold">${{ product.price }}</td>
                                                     <td><div class="text-center">{{ item.quantity }}</div></td>
                                                     <td>${{ item.total_price }}</td>
+                                                    {{ item.optional }}
                                                     <td>
                                                         <div class=" d-flex g-2">
-                                                            <a class="btn text-danger bg-danger-transparent btn-icon py-1" data-bs-toggle="tooltip" data-bs-original-title="Delete" href="{% url "cart:cart_remove" product.id%}"><span class="bi bi-trash fs-16"></span></a>
+                                                            <a class="btn text-danger bg-danger-transparent btn-icon py-1" data-bs-toggle="tooltip" data-bs-original-title="Delete" href="/cart/remove/{{ product.id }}/{{ item.optional }}"><span class="bi bi-trash fs-16"></span></a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -94,7 +95,7 @@
                             <div class="card-footer">
                                 <div class="btn-list">
                                     <a href="{% url 'shop:shop' %}" class="btn btn-primary"><i class="fa fa-arrow-left me-1"></i>Продолжить покупки</a>
-                                    <a href="{% url 'cart:checkout' %}" class="btn btn-success float-sm-end">Перейти к оплате<i class="fa fa-arrow-right ms-1"></i></a>
+                                    <a href="/optional/" class="btn btn-success float-sm-end">Выбрать дополнительные услуги<i class="fa fa-arrow-right ms-1"></i></a>
                                 </div>
                             </div>
                         </div>
